<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="8dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="Horário inicial"
            android:textSize="17sp"
            android:textStyle="bold" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/startTimeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="00:00"
            android:inputType="time"
            app:mask="##:##" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="Horário final"
            android:textSize="17sp"
            android:textStyle="bold" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/endTimeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="00:00"
            android:inputType="time"
            app:mask="##:##" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="Dia"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/daySpinner"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:entries="@array/day_arrays" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="Preço"
            android:textSize="17sp"
            android:textStyle="bold" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/priceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="R$00,00"
            android:inputType="number"
            app:mask="R$##,##" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="finishAddSubjectTime"
            android:text="Adicionar"
            android:textColor="@android:color/background_light"
            android:theme="@style/button"/>
    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible" />
</LinearLayout>
</LinearLayout>