<resources>
    <string name="app_name">FindClass</string>
    <string name="signin">Entrar</string>
    <string name="signup">Cadastrar</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="next">Continuar</string>
    <string name="title_activity_menu_professor">FindClass</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logoutProfessor">Sair</string>
    <string name="title_activity_menu_aluno">FindClass</string>
    <string name="action_logoutAluno">Sair</string>
    <string name="TOAST_STRING">Campos em branco não são permitidos.</string>
    <string name="WEAK_PASSWORD_TOAST">Senha fraca, senhas precisam de no mínimo 6 caracteres.</string>
    <string name="INVALID_EMAIL_TOAST">E-mail inválido.</string>
    <string name="TOAST_STRING_EMAIL_NAO_CADASTRADO">E-mail não cadastrado, realize cadastro</string>
    <string name="title_activity_subject_category_medio">Professores</string>
    <string name="title_activity_subject_category_variados">Professores</string>
    <string name="title_activity_availability_list_aluno">Disponibilidade</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TOAST_BEM_VINDO">Bem-vindo! victor_s.s.m._15@hotmail.com</string>
    <string name="title_activity_rating_professor">Avaliar Professor</string>
    <string name="title_activity_info_scedule_student">Informações</string>
    <string name="title_activity_info_scedule_teacher">Informações</string>
    <string name="title_activity_professor_ranking">Melhores professores</string>
    <string name="title_activity_subject_of_professor">Disciplinas</string>
    <string name="title_activity_subjects_of_level">Disciplinas</string>

    <string-array name="day_arrays">
        <item>dom</item>
        <item>seg</item>
        <item>ter</item>
        <item>qua</item>
        <item>qui</item>
        <item>sex</item>
        <item>sab</item>
    </string-array>


</resources>
