<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivities.SignInActivity"
    tools:layout_editor_absoluteY="81dp">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:foregroundGravity="center_horizontal"
            android:text="Google"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="27dp" />

        <TextView
            android:id="@+id/orTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Ou"
            tools:layout_editor_absoluteX="183dp"
            tools:layout_editor_absoluteY="93dp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="15"
            android:hint="E-mail"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="130dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="15"
            android:hint="Senha"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="185dp" />

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:text="Esqueci minha senha"
            android:textAllCaps="false"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="233dp" />

        <Button
            android:id="@+id/signinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="signIn"
            android:text="Entrar"
            android:textColor="@android:color/background_light"
            android:theme="@style/button"
            tools:layout_editor_absoluteX="122dp"
            tools:layout_editor_absoluteY="271dp" />

        <TextView
            android:id="@+id/notUserYetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Ainda não é nosso usuário?"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="385dp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="signUpIntent"
            android:text="Cadastre-se"
            android:textColor="@android:color/background_light"
            android:theme="@style/button"
            tools:layout_editor_absoluteX="122dp"
            tools:layout_editor_absoluteY="420dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>